src/test/deca/context/valid/decl_method_protected_invalid.deca
class A {
protected int x;
A a = new A();
int y = a.x;
}