src/test/deca/context/invalid/decl_method_protected.deca
class B {
protected int y;
}
class A {
int x;
protected int y;
B a;
int method(){
return x*a.y;
}
}
{
A a;
a.y;
}